tests/snapshots/derive__debug_enum_generic__none.snap
---
source: tests/derive.rs
expression: "Option2::<i32>::None"
---
>>> pretty
None

>>> color
[38;2;166;226;46mNone[0m

