tests/snapshots/derive__debug_enum_generic__some.snap
---
source: tests/derive.rs
expression: "Option2::Some(42)"
---
>>> pretty
Some(42)

>>> color
Some[31m([0m42[31m)[0m


