tests/snapshots/derive__debug_enum_generic__wtf.snap
---
source: tests/derive.rs
expression: "Option2::<i32>::Wtf { foo: true }"
---
>>> pretty
Wtf { foo: true }

>>> color
[32mWtf[0m [31m{[0m foo[31m:[0m true [31m}[0m


